add link to mattous.tk

--- a/html/index.html
+++ b/html/index.html
@@ -16,6 +16,7 @@
       <h1 class="display-5 fw-bold">Hello World!</h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Welcome to my website, theres nothing to see here.</p>
+        <p class="lead mb-4">Maybe checkout <a href="https://mattous.tk">mattous.tk</a> instead!</p>
       </div>
     </div>
     </main>
